--- a/test.html
+++ b/test.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>test.htmlへようこそ</title>
     <link rel="stylesheet" href="test.css"></link>
 </head>
 <body>
     <h1>TEST.html</h1>
     <p>ようこそ！</p>
+    <script src="test.js"></script>
+    <a href="https://www.google.co.jp/">google</a>
+    <br>
+    <a href="https://www.yahoo.co.jp/">yahoo</a>
+    <br>
+    <img src="texture/change.png" alt="背景" id="bg" onclick="hoge('chara.png')">
 </body>
 </html>
